# de-streaming-project

./: .gitignore  README.md  dev.env  docker-compose.yaml  pyproject.toml
airflow/: Dockerfile
airflow/dags/: kafka_stream.py
airflow/scripts/: entrypoint.sh
