[tool.poetry]
name = "de-streaming-project"
version = "0.1.0"
description = ""
authors = ["Kirill Bazarov <kl.bazarov@gmail.com>"]
readme = "README.md"
packages = [{include = "de_streaming_project"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
kafka-python = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
